--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-spring.application.name=gestao-escolar
-spring.datasource.url=jdbc:h2:mem:escola_db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/gestaoescola
+spring.datasource.username=root
+spring.datasource.password=teste
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Criar tabelas automaticamente
 spring.jpa.hibernate.ddl-auto=update
